Fix bug that game appears in a mess when starting